<resources>
    <string name="app_name">Translate It!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myApp">Translate It !!</string>
    <string name="mainMenu">Main Menu</string>
    <string name="play">Play Game</string>
    <string name="scoreborad">High Score</string>
    <string name="about">About</string>
    <string name="time">Timer :</string>
    <string name="score">Score :</string>
    <string name="yourScore">Your score is</string>
    <string name="aboutGame">\t เกมนี้เป็นเกมวัดทักษะภาษาอังกฤษ \n โดยการตอบคำแปลให้ถูกต้อง \n ตามคำศัพท์ที่ให้มา</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>

    <string name="share_success_text">My score is %1$d in Translate it!! Game</string>
    <string name="img">Translate</string>
    <string name="input">Your Name</string>
    <string name="showScore">Score</string>
</resources>
